Fixed bug where large responses caused a div overflow in the api console

--- a/_sass/_api-console.scss
+++ b/_sass/_api-console.scss
@@ -1,20 +1,23 @@
 .api-console {
-    display: table;
+    // display: table;
+    // table-layout: fixed;
 }
 
 .api-console-form-wrapper {
     // background: $Rule-grey;
     background: whitesmoke;
     padding: 5px;
-    display: table-cell;
-    float: none;
+    // display: table-cell;
+    word-break:break-all;
+    // float: none;
 }
 
 .api-console-output {
     color: white;
     background: dimgrey;
-    display: table-cell;
-    float: none;
+    // display: table-cell;
+    word-break:break-all;
+    // float: none;
     padding: 5px;
 }
 
@@ -23,8 +26,7 @@
     padding: 10px;
     margin: 10px;
     overflow: scroll;
-    font-weight: bold;
-
+    
     .string { color: #71e4ff; }
     .number { color: #fc88ff; }
     .boolean { color: #fc88ff; }
@@ -82,4 +84,16 @@
 h5.console-output-header {
     color: white;
     font-weight: bold;
+}
+
+.api-console.row {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+}
+.api-console.row > .api-console-form-wrapper,.api-console-output {
+  display: flex;
+  flex-direction: column;
 }
