--- a/_sass/_api-reference.scss
+++ b/_sass/_api-reference.scss
@@ -93,3 +93,7 @@ h2, h3 {
     margin: 10px;
     padding: 10px;
 }
+
+.endpoint-summary, .api-summary {
+    max-width: 650px;
+}
